--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">User Login</string>
+    <string name="app_name">ezPTP</string>
     <string name="forgot_password">Forgot password</string>
     <string name="sign_in">Sign In</string>
     <string name="dont_have_an_account">Don\'t have an account</string>
@@ -14,12 +14,12 @@
     <string name="logout">Logout</string>
     <string name="enter_the_database">Enter the database!</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
