completed work on the main menu; added a help option to explain what a PTP. next goal is to try and modularize the project so that the login and the main app are separated.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,5 +120,7 @@
     </string>
     <string name="start_ptp">Start PTP</string>
     <string name="help">Help</string>
+    <string name="pre_task_safety_plan">Pre-Task-Safety Plan</string>
+    <string name="disclaimer_image_regarding_safety">Disclaimer image regarding safety</string>
 
 </resources>
